README添加本机yarn运行demo命令